syntax = "proto3";

package model;

option java_package = "com.latesum.meteorlight.proto";
option java_outer_classname = "NewsModelProtos";

import "google/protobuf/timestamp.proto";

message NewsProfile {
    string id = 1;
    string title = 2;
    string url = 3;
    string image = 4;
    google.protobuf.Timestamp time = 5;
    NewsType type = 6;
}

enum NewsType {
    ALL = 0;

    GUONEI = 1;
    GUOJI = 2;
    SHEHUI = 3;
    JUNSHI = 4;
    HANGKONG = 5;
    WURENJI = 6;
}
