syntax = "proto3";

package model;

option java_package = "com.latesum.meteorlight.proto";
option java_outer_classname = "UserModelProtos";

import "model/news.proto";

message UserProfile {
    string id = 1;
    string email = 2;
    string nickname = 3;
    model.NewsType favourite = 4;
    model.NewsType last_look_at = 5;
}

message UserIdAndNickname {
    string id = 1;
    string nickname = 2;
}
