syntax = "proto3";

package service;

option java_package = "com.latesum.meteorlight.proto";
option java_outer_classname = "UserServiceProtos";

import "model/user.proto";
import "model/news.proto";

message AddUserRequest {
    string email = 1;
    string password = 2;
    string nickname = 3;
}

message AddUserResponse {
    model.UserProfile user = 1;
    string activate_code = 2;
}

message ActivateUserRequest {
    string user_id = 1;
    string activate_code = 2;
}

message ActivateUserResponse {
    string user_id = 1;
}

message GetUserActivateCodeRequest {
    string email = 1;
}

message GetUserActivateCodeResponse {
    string user_id = 1;
    string activate_code = 2;
}

message GenerateResetPasswordCodeRequest {
    string email = 1;
}

message GenerateResetPasswordCodeResponse {
    string user_id = 1;
    string reset_password_code = 2;
}

message ResetPasswordRequest {
    string user_id = 1;
    string reset_password_code = 2;
    string new_password = 3;
}

message ResetPasswordResponse {
    string user_id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    model.UserProfile user = 1;
}

message SetUserFavouriteRequest {
    string userId = 1;
    model.NewsType favourite = 2;
}

message SetUserFavouriteResponse {
    model.UserProfile user = 1;
}
